added redux, redux-actions, reactotron, redux-saga

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
       "components/*": ["./src/components/*"],
       "navigation/*": ["./src/navigation/*"],
       "services/*": ["./src/services/*"],
+      "store/*": ["./src/store"],
       "__mocks__/*": ["./__mocks__/*"]
     }
   }
