--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.7.0"
+    "react-native-screens": "^2.7.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -32,7 +35,9 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier-eslint": "^9.0.1",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3"
   },
   "jest": {
     "preset": "react-native"
