--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,8 @@
       "components/*": ["./src/components/*"],
       "navigation/*": ["./src/navigation/*"],
       "services/*": ["./src/services/*"],
-      "store/*": ["./src/store"],
+      "store/*": ["./src/store/*"],
+      "assets/*": ["./src/assets/*"],
       "__mocks__/*": ["./__mocks__/*"]
     }
   }
