--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
+    "axios": "^0.19.2",
+    "qs": "^6.9.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -21,7 +23,8 @@
     "react-native-screens": "^2.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -37,7 +40,8 @@
     "prettier-eslint": "^9.0.1",
     "react-test-renderer": "16.11.0",
     "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3"
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3"
   },
   "jest": {
     "preset": "react-native"
